@@ -120,6 +120,7 @@ Release 0.90.2 - Unreleased
                (Himanshu Vashishtha via garyh)
    HBASE-3576  MasterAddressTracker is registered to ZooKeeperWatcher twice
    HBASE-3561  OPTS arguments are duplicated
+   HBASE-3572  memstore lab can leave half inited data structs (bad!)
 
   IMPROVEMENTS
    HBASE-3542  MultiGet methods in Thrift
